phase-4/day-29/manifests/fixed/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: cluster-recovery
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
